# OpenCV_Hello

./: .gitignore  CMakeLists.txt  CannyTest.cpp  DetectStraitOrNot.cpp  Dvp2Getframe.cpp  DvpFrameCapture.h  ExtendHoughCircle.cpp  SendImage.cpp  SmoothContourTest.cpp  calc_params  calc_params.yml  getPhotoFromMultipleCameras.cpp  houghCircleOfHole.cpp  main.cpp  main.h  utils.cpp  utils.h
lib/x86/: DVPCamera.lib
